Redirectina po prisijungimo

--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -7,7 +7,7 @@
     Layout = "_Layout";
 }
 <div class="text-center">
-    <h1 class="display-4">Prisijungimo forma</h1>
+    <h1 class="display-4">Registacijos forma</h1>
     <center>
         <div style="border-style:double; width:50%; margin-top:10%; background-color: whitesmoke">
             <h2 style="font-weight:normal">Įveskite registracijos duomenis</h2>
