--- a/Pages/RegRezervationsindex.cshtml
+++ b/Pages/RegRezervationsindex.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RegBillsindexModel
+@model RegRezervationsindexModel
 @{
     ViewData["Title"] = "Pagrindinis langas";
 }
@@ -9,5 +9,5 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Sąskaitos</h1>
+    <h1 class="display-4">Rezervacijos</h1>
 </div>
