Kliento valdymo dalis atlikta

--- a/Pages/Shared/_LayoutClient.cshtml
+++ b/Pages/Shared/_LayoutClient.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index"><b>Viešbučio paslaugų sistema</b></a>
+                <a class="navbar-brand" asp-area="" asp-page="/clientindex"><b>Viešbučio paslaugų sistema</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Registration">Rezervuoti kambarį</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Reserve">Rezervuoti kambarį</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Registration">Rervacijos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Reservations">Rezervacijos</a>
                         </li>
                         <li>
-                            <a class="nav-link" style="color: red" asp-area="" asp-page="/Registration"><b>Paskyros naikinimas</b></a>
+                            <a class="nav-link" style="color: red" asp-area="" asp-page="/Deleteacc"><b>Paskyros naikinimas</b></a>
                         </li>
                     </ul>
                 </div>
