--- a/Pages/RegRoomsindex.cshtml
+++ b/Pages/RegRoomsindex.cshtml
@@ -10,4 +10,28 @@
 
 <div class="text-center">
     <h1 class="display-4">Kambariai</h1>
+    <center>
+        <table class="table-striped">
+            <tr>
+                <th>Kambario Nr.</th>
+                <th>Kmbario statusas</th>
+            </tr>
+            <tr>
+                <td>100</td>
+                <td>Užimtas</td>
+                <td><a href="changeroomstate"><input type="button" value="Keisti Būseną" /></a></td>
+            </tr>
+
+            <tr>
+                <td>200</td>
+                <td>Laisvas</td>
+                <td><a href="changeroomstate"><input type="button" value="Keisti Būseną" /></a></td>
+            </tr>
+            <tr>
+                <td>200</td>
+                <td>Tvarkomas</td>
+                <td><a href="changeroomstate"><input type="button" value="Keisti Būseną" /></a></td>
+            </tr>
+        </table>
+    </center>
 </div>
