--- a/Pages/Shared/_LayoutRegistrationWorkers.cshtml
+++ b/Pages/Shared/_LayoutRegistrationWorkers.cshtml
@@ -19,16 +19,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegBillsindex">Saskaitos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RegBillsindex">Saskaitų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegClientsindex">Klientai</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RegClientsindex">Klientaų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRezervationsindex">Rezervacijos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRezervationsindex">Rezervacijų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRoomsindex">Kambariai</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRoomsindex">Kambarių paieška</a>
                         </li>
                     </ul>
                 </div>
