--- a/Pages/Cancelreservation.cshtml
+++ b/Pages/Cancelreservation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model DeleteAccModel
+@model CancelReservationModel
 @{
-    ViewData["Title"] = "Paskyros naikinimas";
+    ViewData["Title"] = "Rezervacijos atšaukimas";
 }
 @{
    Layout = "_LayoutClient";
@@ -9,26 +9,26 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Paskyros naikinimas</h1>
-    <h3>Jūsų paskyros duomenys</h3>
+    <h1 class="display-4">Rezervacijos atšaukimas</h1>
+    <h3>Jūsų rezervacijos duomenys</h3>
     <center>
         <div class="form-group">
             <div class="row">
                 <div class="col-sm-4">
                 </div>
                 <div class="col-sm-4">
-                    Jūsų prisijungimo vardas
+                    Rezervuotas kambarys: 201
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                 </div>
                 <div class="col-sm-4">
-                    Nesumokėtų sąskaitų: 0
+                    Data: 2021/11/25 - 2021/12/01
                 </div>
             </div>
             <br />
-            Ar tikrai norite panaikinti paskyrą?
+            Ar tikrai norite atšaukti rezervaciją?
             <input type="button" class="btn btn-danger" value="Taip" />
             <input type="button" class="btn btn-light" value="Ne" />
         </div>
