--- a/Pages/Shared/_LayoutRegistrationWorkers.cshtml
+++ b/Pages/Shared/_LayoutRegistrationWorkers.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/RegBillsindex">Saskaitų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegClientsindex">Klientaų paieška</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RegClientsindex">Klientų paieška</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/RegRezervationsindex">Rezervacijų paieška</a>
