--- a/Pages/RegBillsindex.cshtml
+++ b/Pages/RegBillsindex.cshtml
@@ -10,30 +10,32 @@
 
 <div class="text-center">
     <h1 class="display-4">Sąskaitos</h1>
-    <table class="table-striped">
-        <tr>
-            <th>Sąskaitos Nr.</th>
-            <th>Apmokėjimo data</th>
-            <th>Sudarymo data</th>
-            <th>Suma</th>
-            <th>Būsena</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2021-11-28</td>
-            <td>2021-11-27</td>
-            <td>150.50</td>
-            <td>Apmokėta</td>
-            <td><a href="aprroverezervation"><input type="button" value="Atšaukti" /></a></td>
-        </tr>
+    <center>
+        <table class="table-striped">
+            <tr>
+                <th>Sąskaitos Nr.</th>
+                <th>Apmokėjimo data</th>
+                <th>Sudarymo data</th>
+                <th>Suma</th>
+                <th>Būsena</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2021-11-28</td>
+                <td>2021-11-27</td>
+                <td>150.50</td>
+                <td>Apmokėta</td>
+                <td><a href="aprroverezervation"><input type="button" value="Apmokėti" /></a></td>
+            </tr>
 
-        <tr>
-            <td>2</td>
-            <td>---- -- --</td>
-            <td>2021-11-04</td>
-            <td>250.20</td>
-            <td>Neapmokėta</td>
-            <td><a href="aprroverezervation"><input type="button" value="Atšaukti" /></a></td>
-        </tr>
-    </table>
+            <tr>
+                <td>2</td>
+                <td>---- -- --</td>
+                <td>2021-11-04</td>
+                <td>250.20</td>
+                <td>Neapmokėta</td>
+                <td><a href="aprroverezervation"><input type="button" value="Apmokėti" /></a></td>
+            </tr>
+        </table>
+    </center>
 </div>
