--- a/Pages/RegClientsindex.cshtml
+++ b/Pages/RegClientsindex.cshtml
@@ -23,7 +23,7 @@
                 <td>Jonaitis</td>
                 <td>860666587</td>
                 <td>1989-01-23</td>
-                <td><a href="checkrezervations"><input type="button" value="Peržiūrėti kliento rezervacijas" /></a></td>
+                <td><a href="RegRezervationsindex"><input type="button" class="btn-light" value="Peržiūrėti kliento rezervacijas" /></a></td>
             </tr>
 
             <tr>
@@ -31,7 +31,7 @@
                 <td>Petraitis</td>
                 <td>860611127</td>
                 <td>1989-01-23</td>
-                <td><a href="checkrezervations"><input type="button" value="Peržiūrėti kliento rezervacijas" /></a></td>
+                <td><a href="RegRezervationsindex"><input type="button" class="btn-light" value="Peržiūrėti kliento rezervacijas" /></a></td>
             </tr>
         </table>
     </center>
