--- a/Pages/Clientindex.cshtml
+++ b/Pages/Clientindex.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ClientindexModel
 @{
-    ViewData["Title"] = "Pagrindinis langas";
+    ViewData["Title"] = "Kliento pagrindinis langas";
 }
 @{
    Layout = "_LayoutClient";
