--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginModel
 @{
-    ViewData["Title"] = "Prisjungimo langas";
+    ViewData["Title"] = "Registracijos langas";
 }
 @{
     Layout = "_Layout";
