--- a/Pages/Reservations.cshtml
+++ b/Pages/Reservations.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ReservationsModel
 @{
-    ViewData["Title"] = "Pagrindinis langas";
+    ViewData["Title"] = "Rezervacijos";
 }
 @{
    Layout = "_LayoutClient";
