--- a/Pages/Workerlist.cshtml
+++ b/Pages/Workerlist.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model WorkerlistModel
 @{
-    ViewData["Title"] = "Administavimo pagrindinis langas";
+    ViewData["Title"] = "Darbuotojų sąrašas";
 }
 @{
    Layout = "_Layoutadmin";
