--- a/Pages/RegBillsindex.cshtml
+++ b/Pages/RegBillsindex.cshtml
@@ -25,7 +25,7 @@
                 <td>2021-11-27</td>
                 <td>150.50</td>
                 <td>Apmokėta</td>
-                <td><a href="aprroverezervation"><input type="button" value="Apmokėti" /></a></td>
+                <td><a href="paybillcash"><input type="button" value="Apmokėti" /></a></td>
             </tr>
 
             <tr>
@@ -34,7 +34,7 @@
                 <td>2021-11-04</td>
                 <td>250.20</td>
                 <td>Neapmokėta</td>
-                <td><a href="aprroverezervation"><input type="button" value="Apmokėti" /></a></td>
+                <td><a href="paybillcash"><input type="button" value="Apmokėti" /></a></td>
             </tr>
         </table>
     </center>
