--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -14,7 +14,7 @@
             <form style="margin-left:35%;" method="post">
                 <div class="form-group">
                     <div class="row">
-                        <input placeholder="El.Paštas" type="email" name="email" />
+                        <input placeholder="Prisijungimo vardas" type="text" name="username" />
                     </div>
                 </div>
                 <div class="form-group">
