--- a/Pages/Registration/ApproveReservation.cshtml
+++ b/Pages/Registration/ApproveReservation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AprroveReservationModel
 @{
-    ViewData["Title"] = "Rezervacijos atšaukimas";
+    ViewData["Title"] = "Rezervacijos patvirtinimas";
 }
 @{
    Layout = "_LayoutRegistrationWorkers";
