--- a/Pages/Registration/RegRezervationsindex.cshtml
+++ b/Pages/Registration/RegRezervationsindex.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page   "RegRezervationsindex"
 @model RegRezervationsindexModel
 @{
     ViewData["Title"] = "Pagrindinis langas";
@@ -26,7 +26,7 @@
                 <td>2021-11-20</td>
                 <td>2021-11-27</td>
                 <td>Rezervuota</td>
-                <td><a href="aprroveReservation"><input type="button" value="Patvirtinti rezervaciją" /></a></td>
+                <td><a asp-page="AprroveReservation"><input type="button" value="Patvirtinti rezervaciją" /></a></td>
             </tr>
 
             <tr>
@@ -35,7 +35,7 @@
                 <td>2021-11-01</td>
                 <td>2021-11-05</td>
                 <td>Rezervuota</td>
-                <td><a href="aprroveReservation"><input type="button" value="Patvirtinti rezervaciją" /></a></td>
+                <td><a asp-page="AprroveReservation"><input type="button" value="Patvirtinti rezervaciją" /></a></td>
             </tr>
         </table>
     </center>
