--- a/Pages/Shared/_LayoutRegistrationWorkers.cshtml
+++ b/Pages/Shared/_LayoutRegistrationWorkers.cshtml
@@ -16,19 +16,24 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegBillsindex">Saskaitų paieška</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="RegBillsindex">Saskaitų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegClientsindex">Klientų paieška</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="RegClientsindex">Klientų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRezervationsindex">Rezervacijų paieška</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="RegRezervationsindex">Rezervacijų paieška</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RegRoomsindex">Kambarių paieška</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="RegRoomsindex">Kambarių paieška</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="LogOut">Atsijungti</a>
                         </li>
                     </ul>
                 </div>
