--- a/Pages/Shared/_LayoutClient.cshtml
+++ b/Pages/Shared/_LayoutClient.cshtml
@@ -16,7 +16,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clients/Reserve">Rezervuoti kambarį</a>
@@ -26,6 +26,11 @@
                         </li>
                         <li>
                             <a class="nav-link" style="color: red" asp-area="" asp-page="/Clients/Deleteacc"><b>Paskyros naikinimas</b></a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="LogOut">Atsijungti</a>
                         </li>
                     </ul>
                 </div>
