--- a/Pages/Admin/DeleteWorker.cshtml
+++ b/Pages/Admin/DeleteWorker.cshtml
@@ -1,16 +1,20 @@
-﻿@page
-@model RegisterworkerModel
+﻿@page "{id}/{handler?}"
+@model DeleteworkerModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Darbuotojo išregistravimas";
 }
 @{
-   Layout = "_Layoutadmin";
+    Layout = "_Layoutadmin";
 }
 
 
 <div class="text-center">
     <h1 class="display-4">Darbuotojo išregistravimas</h1>
-    <h3>Ar tikrai norite pašalinti darbuotoją?</h3>
-    <input type="button" class="btn btn-danger" value="Taip" />
+    @if (Model.deleteID != null)
+    {
+     <h3>Ar tikrai norite pašalinti darbuotoją, kurio id: @Model.deleteID ?</h3>
+    }
+    <a asp-area="" asp-page="/Admin/Deleteworker" asp-page-handler="OnClick" asp-route-ID="@Model.deleteID" class="btn btn-danger">Taip</a>
     <input type="button" class="btn btn-light" value="Ne" />
 </div>
